[package]
name = "pallet-encointer-currencies"
version = "0.3.0"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
tag = "v0.5.4+sub_v0.1"
package = "substrate-fixed"

[dependencies.rstd]
default-features = false
package = "sp-std"
version = "2.0.0-alpha.7"

[dependencies.runtime-io]
default-features = false
package = "sp-io"
version = "2.0.0-alpha.7"

[dependencies.sp-runtime]
default-features = false
package = "sp-runtime"
version = "2.0.0-alpha.7"

[dependencies.primitives]
default-features = false
package = "sp-core"
version = "2.0.0-alpha.7"

[dependencies.balances]
default-features = false
package = "pallet-balances"
version = "2.0.0-alpha.7"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.0"

[dependencies.support]
default-features = false
package = "frame-support"
version = "2.0.0-alpha.7"

[dependencies.system]
default-features = false
package = "frame-system"
version = "2.0.0-alpha.7"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.101"

[dev-dependencies]
approx = "0.3.0"

[dev-dependencies.externalities]
package = "sp-externalities"
version = "0.8.0-alpha.7"

[dev-dependencies.sp-keyring]
package = "sp-keyring"
version = "2.0.0-alpha.7"

[features]
default = ["std"]
std = [
	"balances/std",
	"codec/std",
	"rstd/std",
	"runtime-io/std",
	"serde",
	"sp-runtime/std",
	"support/std",
	"primitives/std",
	"system/std",
	"fixed/std",
]

#[patch."https://github.com/encointer/substrate-fixed"]
#substrate-fixed = { path = "../substrate-fixed" }
