[package]
name = "pallet-encointer-democracy"
version = "3.0.2"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Democracy pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }

# local deps
encointer-primitives = { workspace = true }
pallet-encointer-ceremonies = { workspace = true }
pallet-encointer-communities = { workspace = true }
pallet-encointer-scheduler = { workspace = true }

# substrate deps
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# benchmarking
frame-benchmarking = { workspace = true, optional = true }
sp-application-crypto = { workspace = true, optional = true }
sp-core = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
pallet-encointer-ceremonies = { workspace = true, features = ["mocks"] }
pallet-encointer-balances = { workspace = true }
itertools = { workspace = true }
rstest = { workspace = true }
sp-io = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true }
test-utils = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "pallet-encointer-balances/std",
    "pallet-encointer-ceremonies/std",
    "pallet-encointer-communities/std",
    "encointer-primitives/std",
    "pallet-encointer-scheduler/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-timestamp/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "pallet-encointer-balances/runtime-benchmarks",
    "pallet-encointer-ceremonies/runtime-benchmarks",
    "pallet-encointer-communities/runtime-benchmarks",
    "pallet-encointer-scheduler/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-application-crypto",
    "sp-core",
]
try-runtime = [
    "pallet-encointer-balances/try-runtime",
    "pallet-encointer-ceremonies/try-runtime",
    "pallet-encointer-communities/try-runtime",
    "pallet-encointer-scheduler/try-runtime",
    "frame-system/try-runtime",
]
