[package]
name = "pallet-encointer-faucet"
version = "3.0.1"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Faucet pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
approx = { version = "0.5.1", optional = true }
codec = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = [
    "derive",
] }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.10.0", default-features = false }

# local deps
encointer-communities = { package = "pallet-encointer-communities", path = "../communities", default-features = false, version = "3.0.1" }
encointer-primitives = { path = "../primitives", default-features = false, features = ["serde_derive"], version = "3.0.1" }
encointer-reputation-commitments = { package = "pallet-encointer-reputation-commitments", path = "../reputation-commitments", default-features = false, version = "3.0.1" }

# substrate deps
frame-benchmarking = { default-features = false, optional = true, version = "25.0.0" }
frame-support = { default-features = false, version = "25.0.0" }
frame-system = { default-features = false, version = "25.0.0" }
pallet-treasury = { default-features = false, version = "24.0.0" }
sp-core = { default-features = false, version = "25.0.0" }
sp-runtime = { default-features = false, version = "28.0.0" }
sp-std = { default-features = false, version = "12.0.0" }

[dev-dependencies]
approx = "0.5.1"
sp-io = "27.0.0"
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
    "approx/std",
    "codec/std",
    # local deps
    "encointer-communities/std",
    "encointer-primitives/std",
    "encointer-reputation-commitments/std",
    # substrate deps
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-treasury/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]

runtime-benchmarks = [
    "approx",
    "encointer-communities/runtime-benchmarks",
    "encointer-reputation-commitments/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
    "test-utils/runtime-benchmarks",
]

try-runtime = [
    "encointer-communities/try-runtime",
    "encointer-reputation-commitments/try-runtime",
    "frame-system/try-runtime",
    "test-utils/try-runtime",
]
