[package]
name = "pallet-encointer-faucet"
version = "3.0.3"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Faucet pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
approx = { workspace = true, optional = true }
parity-scale-codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }

# local deps
encointer-communities = { package = "pallet-encointer-communities", path = "../communities", default-features = false, version = "3.0.3" }
encointer-primitives = { path = "../primitives", default-features = false, features = ["serde_derive"], version = "3.0.2" }
encointer-reputation-commitments = { package = "pallet-encointer-reputation-commitments", path = "../reputation-commitments", default-features = false, version = "3.0.2" }

# substrate deps
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-treasury = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
sp-io = { workspace = true, features = ["std"] }
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
    "approx/std",
    "parity-scale-codec/std",
    # local deps
    "encointer-communities/std",
    "encointer-primitives/std",
    "encointer-reputation-commitments/std",
    # substrate deps
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-treasury/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "approx",
    "encointer-communities/runtime-benchmarks",
    "encointer-reputation-commitments/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
]
try-runtime = [
    "encointer-communities/try-runtime",
    "encointer-reputation-commitments/try-runtime",
    "frame-system/try-runtime",
]
