[package]
name = "pallet-encointer-offline-payment"
version = "21.0.1"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Offline payment pallet using ZK proofs for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# arkworks ZK deps
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["r1cs", "sponge"] }
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }

# local deps
encointer-offline-payment-core = { workspace = true }
encointer-primitives = { workspace = true }
pallet-encointer-balances = { workspace = true }
pallet-encointer-communities = { workspace = true }

# substrate deps
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
test-utils = { workspace = true }
rand = "0.8"

[features]
default = ["std"]
std = [
    "encointer-offline-payment-core/std",
    "encointer-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-encointer-balances/std",
    "pallet-encointer-communities/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-benchmarking?/std",
    "ark-bn254/std",
    "ark-crypto-primitives/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-groth16/std",
    "ark-r1cs-std/std",
    "ark-relations/std",
    "ark-serialize/std",
    "ark-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-encointer-balances/runtime-benchmarks",
    "pallet-encointer-communities/runtime-benchmarks",
    "encointer-primitives/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "test-utils/runtime-benchmarks",
]
try-runtime = [
    "frame-system/try-runtime",
    "pallet-encointer-balances/try-runtime",
    "pallet-encointer-communities/try-runtime",
    "encointer-primitives/try-runtime",
    "frame-support/try-runtime",
    "sp-runtime/try-runtime",
    "test-utils/try-runtime",
]
