[package]
name = "pallet-encointer-personhood-oracle"
version = "0.8.0"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2018"

[dependencies]
log = { version = "0.4.14", default-features = false }
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false }

# local deps
encointer-primitives = { path = "../primitives", default-features = false, features = ["sybil"]}
encointer-balances = { package = "pallet-encointer-balances", path = "../balances", default-features = false }
encointer-ceremonies = { package = "pallet-encointer-ceremonies", path = "../ceremonies", default-features = false }
encointer-communities = { package = "pallet-encointer-communities", path = "../communities", default-features = false }
encointer-scheduler = { package = "pallet-encointer-scheduler", path = "../scheduler", default-features = false }

# substrate deps
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.17" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.17" }
sp-core = {git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.17" }
sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.17" }
sp-runtime = {  git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.17" }

# polkadot deps
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.17" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.17" }

[dev-dependencies]
hex = "0.4.3"
sp-io = {  git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
test-utils = { path = "../test-utils" }
xcm-executor = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.17" }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "frame-support/std",
    "frame-system/std",
    "polkadot-parachain/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "xcm/std",
    "encointer-balances/std",
    "encointer-ceremonies/std",
    "encointer-communities/std",
    "encointer-primitives/std",
    "encointer-scheduler/std",
]
