[package]
name = "encointer-primitives"
version = "11.2.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Primitives for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
bs58 = { workspace = true }
crc = { workspace = true }
geohash = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }

# local deps
ep-core = { workspace = true }

# substrate deps
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
test-utils = { workspace = true }

[features]
default = ["serde_derive", "std"]
full_crypto = ["sp-core/full_crypto"]
serde_derive = ["ep-core/serde_derive", "serde"]
std = [
    "bs58/std",
    "ep-core/std",
    "frame-support/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "serde/std",
    "sp-core/full_crypto",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
]
try-runtime = []
