[package]
name = "pallet-encointer-reputation-commitments"
version = "3.0.2"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Reputation commitments pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[dependencies]
approx = { workspace = true, optional = true }
parity-scale-codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }

# local deps
encointer-ceremonies = { package = "pallet-encointer-ceremonies", path = "../ceremonies", default-features = false, version = "3.0.2" }
encointer-communities = { package = "pallet-encointer-communities", path = "../communities", default-features = false, version = "3.0.2" }
encointer-primitives = { path = "../primitives", default-features = false, features = ["serde_derive"], version = "3.0.2" }
encointer-scheduler = { package = "pallet-encointer-scheduler", path = "../scheduler", default-features = false, version = "3.0.2" }

# substrate deps
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
sp-io = { workspace = true, features = ["std"] }
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
std = [
    "approx/std",
    "parity-scale-codec/std",
    "encointer-ceremonies/std",
    "encointer-communities/std",
    # local deps
    "encointer-primitives/std",
    "encointer-scheduler/std",
    # substrate deps
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "approx",
    "encointer-ceremonies/runtime-benchmarks",
    "encointer-communities/runtime-benchmarks",
    "encointer-scheduler/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "encointer-ceremonies/try-runtime",
    "encointer-communities/try-runtime",
    "encointer-scheduler/try-runtime",
    "frame-system/try-runtime",
]
