[package]
name = "pallet-encointer-reputation-commitments"
version = "20.1.0"
authors = ["Encointer Association <info@encointer.org>"]
edition = "2021"
description = "Reputation commitments pallet for the Encointer blockchain runtime"
homepage = "https://encointer.org"
repository = "https://github.com/encointer/pallets"
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
approx = { workspace = true, optional = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# local deps
encointer-primitives = { workspace = true }
pallet-encointer-ceremonies = { workspace = true }
pallet-encointer-communities = { workspace = true }
pallet-encointer-scheduler = { workspace = true }

# substrate deps
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
sp-io = { workspace = true, features = ["std"] }
test-utils = { workspace = true }

[features]
default = ["std"]
std = [
    "approx/std",
    "encointer-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-encointer-ceremonies/std",
    "pallet-encointer-communities/std",
    "pallet-encointer-scheduler/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-benchmarking?/std",
    "pallet-timestamp/std",
    "sp-io/std",
]
runtime-benchmarks = [
    "approx",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-encointer-ceremonies/runtime-benchmarks",
    "pallet-encointer-communities/runtime-benchmarks",
    "pallet-encointer-scheduler/runtime-benchmarks",
    "encointer-primitives/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "test-utils/runtime-benchmarks",
]
try-runtime = [
    "frame-system/try-runtime",
    "pallet-encointer-ceremonies/try-runtime",
    "pallet-encointer-communities/try-runtime",
    "pallet-encointer-scheduler/try-runtime",
    "encointer-primitives/try-runtime",
    "frame-support/try-runtime",
    "pallet-timestamp/try-runtime",
    "sp-runtime/try-runtime",
    "test-utils/try-runtime",
]
